# RayTracer

./: CMakeLists.txt  Makefile  hit_record.h  integrator.cpp  jpeg.cpp  main  main.cpp  material.cpp  material.h  matrixInverse.cpp  matrixInverse.h  mesh.cpp  mesh.h  parser.cpp  parser.h  rotation.cpp  rotation.h  scene.cpp  scene.h  sphere.cpp  sphere.h  texture.cpp  texture.h  transformation.cpp  transformation.h  triangle.cpp  triangle.h
XMLs/: ellipsoids_texture_bilinear.xml  ellipsoids_texture_nearest.xml  mirror_spheres.xml
